--- a/index.html
+++ b/index.html
@@ -8,23 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --bg-primary: #800000;
             --accent-gold: #ffd700;
             --text-primary: #ffffff;
             --text-secondary: rgba(255, 255, 255, 0.8);
             --border-color: rgba(255, 215, 0, 0.4);
-            --bg-card: rgba(102, 0, 0, 0.9);
+            --bg-card: rgba(0, 0, 0, 0.6); /* Transparent dark for visibility */
         }
 
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        /* 9 SECOND BG ANIMATION */
+        /* --- 9 SECOND PER COLOR BACKGROUND ANIMATION --- */
         @keyframes slowBGChange {
-            0% { background-color: #800000; }
-            25% { background-color: #000033; }
-            50% { background-color: #2d004d; }
-            75% { background-color: #1a1a1a; }
-            100% { background-color: #800000; }
+            0% { background-color: #800000; }   /* Maroon */
+            25% { background-color: #000033; }  /* Dark Blue */
+            50% { background-color: #2d004d; }  /* Deep Purple */
+            75% { background-color: #1a1a1a; }  /* Dark Grey/Black */
+            100% { background-color: #800000; } /* Back to Maroon */
         }
 
         body {
@@ -32,14 +31,15 @@
             color: var(--text-primary);
             min-height: 100vh;
             padding: 20px;
-            animation: slowBGChange 36s infinite ease-in-out;
-            transition: background-color 9s ease;
+            animation: slowBGChange 36s infinite ease-in-out; /* 9s x 4 colors = 36s total */
+            transition: background-color 9s ease; /* Smooth fade effect */
         }
 
         .container { max-width: 450px; margin: 0 auto; }
 
-        /* HEADER SECTION */
-        .header { text-align: center; margin-bottom: 30px; padding: 20px; }
+        /* --- HEADER SECTION --- */
+        .header { text-align: center; margin-bottom: 30px; padding: 20px; position: relative; }
+
         @keyframes slowColorChange {
             0% { color: #ff0000; text-shadow: 0 0 15px #ff0000; }
             14% { color: #ffd700; text-shadow: 0 0 15px #ffd700; }
@@ -50,62 +50,145 @@
             85% { color: #ffffff; text-shadow: 0 0 15px #ffffff; }
             100% { color: #ff0000; text-shadow: 0 0 15px #ff0000; }
         }
-        .logo { font-size: 2.8rem; font-weight: 900; display: flex; align-items: center; justify-content: center; gap: 15px; position: relative; animation: slowColorChange 35s infinite linear; }
-        .name-sparkle { position: absolute; width: 5px; height: 5px; border-radius: 50%; background: currentColor; animation: nameBurst 2s infinite; }
-        @keyframes nameBurst { 0% { transform: translate(0, 0) scale(1); opacity: 1; } 100% { transform: translate(var(--nx), var(--ny)) scale(0); opacity: 0; } }
 
-        /* ENERGY & MUSIC */
-        .energy-wrapper { display: flex; align-items: center; justify-content: center; gap: 20px; margin: 20px auto; }
+        .logo {
+            font-size: 2.8rem;
+            font-weight: 900;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 15px;
+            position: relative;
+            white-space: nowrap;
+            animation: slowColorChange 35s infinite linear;
+        }
+
+        .name-sparkle {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+            background: currentColor;
+            pointer-events: none;
+            animation: nameBurst 2s infinite;
+        }
+
+        @keyframes nameBurst {
+            0% { transform: translate(0, 0) scale(1); opacity: 1; }
+            100% { transform: translate(var(--nx), var(--ny)) scale(0); opacity: 0; }
+        }
+
+        /* --- ENERGY BAR & MUSIC BUTTONS --- */
+        .energy-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px auto;
+        }
+
         .energy-bar { width: 90px; height: 90px; position: relative; }
-        .energy-circle { width: 100%; height: 100%; border-radius: 50%; border: 3px solid var(--accent-gold); box-shadow: 0 0 15px var(--accent-gold); position: relative; }
+        .energy-circle { width: 100%; height: 100%; border-radius: 50%; position: relative; border: 3px solid var(--accent-gold); box-shadow: 0 0 15px var(--accent-gold); }
         .energy-fill { position: absolute; width: 100%; height: 100%; background: conic-gradient(var(--accent-gold) 0%, transparent 70%); border-radius: 50%; animation: rotateEnergy 2s linear infinite; }
-        .energy-center { position: absolute; width: 60px; height: 60px; background: rgba(0,0,0,0.5); border-radius: 50%; top: 50%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: center; justify-content: center; color: var(--accent-gold); font-weight: 900; border: 2px solid var(--accent-gold); z-index: 2; }
-        .sparkle { position: absolute; width: 4px; height: 4px; background: var(--accent-gold); border-radius: 50%; animation: burst 1.5s infinite; }
-        @keyframes burst { 0% { transform: translate(-50%, -50%) scale(1); opacity: 1; } 100% { transform: translate(calc(-50% + var(--x)), calc(-50% + var(--y))) scale(0); opacity: 0; } }
-        @keyframes rotateEnergy { 100% { transform: rotate(360deg); } }
+        
+        .sparkle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: var(--accent-gold);
+            border-radius: 50%;
+            top: 50%;
+            left: 50%;
+            animation: burst 1.5s infinite;
+        }
 
-        .music-btn { width: 45px; height: 45px; background: rgba(0,0,0,0.4); color: var(--accent-gold); border-radius: 50%; border: 2px solid var(--accent-gold); cursor: pointer; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
-        .music-btn.playing { background: #00ff00; color: #000; box-shadow: 0 0 15px #00ff00; }
+        @keyframes burst {
+            0% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
+            100% { transform: translate(calc(-50% + var(--x)), calc(-50% + var(--y))) scale(0); opacity: 0; }
+        }
 
-        /* ORIGINAL SERVER CARD (UNTOUCHED) */
-        .server-card { background: var(--bg-card); border: 2px solid var(--border-color); border-radius: 15px; padding: 20px; margin-bottom: 25px; text-align: center; }
+        @keyframes rotateEnergy { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        .energy-center { position: absolute; width: 60px; height: 60px; background: rgba(128, 0, 0, 0.8); border-radius: 50%; top: 50%; left: 50%; transform: translate(-50%, -50%); display: flex; align-items: center; justify-content: center; color: var(--accent-gold); font-weight: 900; border: 2px solid var(--accent-gold); z-index: 2; }
+
+        /* Music Button Styling */
+        .music-btn {
+            width: 45px;
+            height: 45px;
+            background: rgba(0, 0, 0, 0.4);
+            color: var(--accent-gold);
+            border-radius: 50%;
+            border: 2px solid var(--accent-gold);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1rem;
+            transition: 0.3s;
+        }
+
+        .music-btn.playing {
+            background: #00ff00;
+            color: #000;
+            box-shadow: 0 0 15px #00ff00;
+            animation: pulseMusic 1.5s infinite;
+        }
+
+        @keyframes pulseMusic {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
+
+        /* --- CARDS & UI ELEMENTS --- */
+        .server-card, .main-card, .instructions {
+            background: var(--bg-card);
+            border: 2px solid var(--border-color);
+            border-radius: 15px;
+            padding: 20px;
+            margin-bottom: 25px;
+            text-align: center;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(5px);
+        }
+
         .server-name { color: var(--accent-gold); font-weight: 700; font-size: 1.2rem; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 10px; }
         .server-stats { display: flex; justify-content: space-around; }
         .stat-value { color: var(--accent-gold); font-weight: 800; font-size: 1.5rem; display: block; }
+        .stat-label { color: var(--text-secondary); font-size: 0.8rem; }
 
-        /* ORIGINAL MAIN CARD */
-        .main-card { background: var(--bg-card); border: 2px solid var(--border-color); border-radius: 20px; padding: 25px; margin-bottom: 20px; }
-        input[type="tel"] { width: 100%; padding: 14px; background: rgba(0,0,0,0.3); border: 2px solid var(--border-color); border-radius: 10px; color: #fff; font-size: 1rem; outline: none; margin-bottom: 20px; }
-        .btn { width: 100%; padding: 16px; background: var(--accent-gold); color: #800000; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 800; cursor: pointer; transition: 0.3s; }
+        input[type="tel"] { width: 100%; padding: 14px; background: rgba(0, 0, 0, 0.5); border: 2px solid var(--border-color); border-radius: 10px; color: #fff; font-size: 1rem; outline: none; text-align: center; }
+        .btn { width: 100%; padding: 16px; background: var(--accent-gold); color: #800000; border: none; border-radius: 12px; font-size: 1.1rem; font-weight: 800; cursor: pointer; margin-top: 10px; transition: 0.3s; }
+        .btn:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(255, 215, 0, 0.4); }
 
-        /* RESULT BOX FIXED */
-        .result-box { background: rgba(0,0,0,0.4); border: 2px dashed var(--accent-gold); border-radius: 15px; padding: 25px; margin-top: 20px; text-align: center; display: none; }
-        .pair-code { font-size: 2.5rem; font-weight: 900; letter-spacing: 8px; color: var(--accent-gold); margin: 20px 0; font-family: 'Courier New', monospace; background: rgba(0,0,0,0.3); padding: 20px; border-radius: 12px; border: 2px solid var(--border-color); word-break: break-all; }
-        .copy-btn { background: transparent; border: 2px solid var(--accent-gold); color: var(--accent-gold); padding: 12px 25px; border-radius: 10px; font-weight: 700; cursor: pointer; }
-
-        .instructions { background: rgba(0,0,0,0.3); padding: 20px; border-radius: 12px; border: 1px solid var(--border-color); }
-        .footer { text-align: center; margin-top: 40px; color: var(--text-secondary); font-size: 0.8rem; }
+        .pair-code { font-size: 2.5rem; font-weight: 900; letter-spacing: 5px; color: var(--accent-gold); background: rgba(0, 0, 0, 0.4); padding: 20px; border-radius: 12px; border: 2px solid var(--border-color); margin: 20px 0; }
+        .copy-btn { background: transparent; border: 2px solid var(--accent-gold); color: var(--accent-gold); padding: 10px 20px; border-radius: 10px; cursor: pointer; }
+        .footer { text-align: center; margin-top: 40px; color: var(--text-secondary); font-size: 0.8rem; opacity: 0.8; }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="logo">
+            <div class="logo" id="mainLogo">
                 <i class="fab fa-whatsapp"></i> ADEEL-MINI
                 <div class="name-sparkle" style="--nx: 70px; --ny: -40px;"></div>
                 <div class="name-sparkle" style="--nx: -70px; --ny: 40px;"></div>
+                <div class="name-sparkle" style="--nx: 50px; --ny: 50px;"></div>
+                <div class="name-sparkle" style="--nx: -50px; --ny: -50px;"></div>
             </div>
+            
             <div class="energy-wrapper">
-                <button class="music-btn" onclick="toggleMusic('music1', this)"><i class="fas fa-music"></i></button>
+                <button class="music-btn" onclick="toggleMusic('music1', this)"><i class="fas fa-play"></i></button>
                 <div class="energy-bar">
                     <div class="energy-circle">
                         <div class="energy-fill"></div>
-                        <div class="energy-center">70%</div>
+                        <div class="energy-center" id="energyPercent">70%</div>
                         <div class="sparkle" style="--x: 50px; --y: -50px;"></div>
                         <div class="sparkle" style="--x: -50px; --y: 50px;"></div>
+                        <div class="sparkle" style="--x: 40px; --y: 0px;"></div>
+                        <div class="sparkle" style="--x: -40px; --y: -40px;"></div>
                     </div>
                 </div>
-                <button class="music-btn" onclick="toggleMusic('music2', this)"><i class="fas fa-music"></i></button>
+                <button class="music-btn" onclick="toggleMusic('music2', this)"><i class="fas fa-play"></i></button>
             </div>
         </div>
 
@@ -122,22 +205,20 @@
         </div>
 
         <div class="main-card">
-            <div class="section-title" style="color:var(--accent-gold); margin-bottom:15px;"><i class="fas fa-link"></i> Generate Pairing Code</div>
+            <div class="section-title"><i class="fas fa-link"></i> Generate Pairing Code</div>
             <input type="tel" id="phoneNumber" placeholder="92303XXXXXXX" maxlength="15">
-            <button class="btn" id="generateBtn">Generate Pairing Code</button>
-            <div class="result-box" id="resultBox">
-                <div style="font-size: 0.9rem; color: var(--accent-gold);">YOUR PAIRING CODE</div>
-                <div class="pair-code" id="pairCode">--------</div>
-                <button class="copy-btn" id="copyBtn">Copy Code</button>
+            <button class="btn" id="generateBtn"><i class="fas fa-key"></i> Generate Pairing Code</button>
+            <div class="result-box" id="resultBox" style="display:none; margin-top:20px; animation: fadeIn 0.5s ease;">
+                <div class="pair-code" id="pairCode" style="word-break: break-all;">--------</div>
+                <button class="copy-btn" id="copyBtn" style="width: 100%; margin-top: 10px; font-weight: bold;">Copy Code</button>
             </div>
         </div>
 
         <div class="instructions">
             <h4>How to Use:</h4>
-            <ol style="padding-left:20px; font-size:0.85rem; line-height:1.6; color:var(--text-secondary);">
+            <ol style="text-align:left; padding-left:20px;">
                 <li>Enter your number with country code.</li>
-                <li>Go to WhatsApp Settings -> Linked Devices.</li>
-                <li>Enter the code shown above.</li>
+                <li>Go to WhatsApp -> Linked Devices -> Link with Phone Number.</li>
             </ol>
         </div>
 
@@ -153,14 +234,14 @@
             const allBtns = document.querySelectorAll('.music-btn');
             if (music.paused) {
                 allAudios.forEach(a => a.pause());
-                allBtns.forEach(b => { b.classList.remove('playing'); b.innerHTML = '<i class="fas fa-music"></i>'; });
+                allBtns.forEach(b => { b.classList.remove('playing'); b.innerHTML = '<i class="fas fa-play"></i>'; });
                 music.play();
                 btn.classList.add('playing');
                 btn.innerHTML = '<i class="fas fa-pause"></i>';
             } else {
                 music.pause();
                 btn.classList.remove('playing');
-                btn.innerHTML = '<i class="fas fa-music"></i>';
+                btn.innerHTML = '<i class="fas fa-play"></i>';
             }
         }
     </script>
