--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         }
 
         @keyframes boxColorChange {
-            0% { border-color: #ff0000; box-shadow: 0 5px 20px rgba(255, 0, 0, 0.3); }
-            25% { border-color: #ffd700; box-shadow: 0 5px 20px rgba(255, 215, 0, 0.3); }
-            50% { border-color: #00ff00; box-shadow: 0 5px 20px rgba(0, 255, 0, 0.3); }
-            75% { border-color: #00ffff; box-shadow: 0 5px 20px rgba(0, 255, 255, 0.3); }
-            100% { border-color: #ff0000; box-shadow: 0 5px 20px rgba(255, 0, 0, 0.3); }
+            0% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.5); }
+            25% { border-color: #ffd700; box-shadow: 0 5px 25px rgba(255, 215, 0, 0.5); }
+            50% { border-color: #00ff00; box-shadow: 0 5px 25px rgba(0, 255, 0, 0.5); }
+            75% { border-color: #00ffff; box-shadow: 0 5px 25px rgba(0, 255, 255, 0.5); }
+            100% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.5); }
         }
 
         body {
@@ -49,14 +49,14 @@
         .header { text-align: center; margin-bottom: 30px; padding: 20px; position: relative; }
 
         @keyframes slowColorChange {
-            0% { color: #ff0000; text-shadow: 0 0 15px #ff0000; }
-            14% { color: #ffd700; text-shadow: 0 0 15px #ffd700; }
-            28% { color: #00ff00; text-shadow: 0 0 15px #00ff00; }
-            42% { color: #00ffff; text-shadow: 0 0 15px #00ffff; }
-            56% { color: #0000ff; text-shadow: 0 0 15px #0000ff; }
-            70% { color: #ff00ff; text-shadow: 0 0 15px #ff00ff; }
-            85% { color: #ffffff; text-shadow: 0 0 15px #ffffff; }
-            100% { color: #ff0000; text-shadow: 0 0 15px #ff0000; }
+            0% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
+            14% { color: #ffd700; text-shadow: 0 0 20px #ffd700; }
+            28% { color: #00ff00; text-shadow: 0 0 20px #00ff00; }
+            42% { color: #00ffff; text-shadow: 0 0 20px #00ffff; }
+            56% { color: #0000ff; text-shadow: 0 0 20px #0000ff; }
+            70% { color: #ff00ff; text-shadow: 0 0 20px #ff00ff; }
+            85% { color: #ffffff; text-shadow: 0 0 20px #ffffff; }
+            100% { color: #ff0000; text-shadow: 0 0 20px #ff0000; }
         }
 
         .logo {
@@ -71,35 +71,36 @@
             animation: slowColorChange 35s infinite linear;
         }
 
-        /* --- SUPER ULTRA-SHOKH (800% BRIGHTNESS) --- */
+        /* --- 800% ULTRA-BRIGHT SPARKLES --- */
         @keyframes fireworkBurst {
             0% { 
                 transform: translate(0, 0) scale(1.5); 
                 opacity: 1; 
-                filter: brightness(800%) hue-rotate(0deg); 
+                filter: brightness(800%) hue-rotate(0deg);
             }
             50% { 
                 opacity: 1; 
-                filter: brightness(1000%) hue-rotate(180deg); 
-                box-shadow: 0 0 25px currentColor, 0 0 50px currentColor, 0 0 70px #fff;
+                filter: brightness(1000%) hue-rotate(180deg);
             }
             100% { 
                 transform: translate(var(--nx), var(--ny)) scale(0); 
                 opacity: 0; 
-                filter: brightness(200%) hue-rotate(360deg); 
+                filter: brightness(400%) hue-rotate(360deg);
             }
         }
 
         .name-sparkle, .sparkle-particle {
             position: absolute; 
-            width: 10px; /* سائز تھوڑا اور وڈا کر ڈتا ہے */
+            width: 10px; 
             height: 10px; 
             border-radius: 50%; 
             pointer-events: none; 
-            animation: fireworkBurst 1.8s infinite cubic-bezier(0.1, 0.8, 0.4, 1);
-            background: #fff; /* اندرونی سفید چمک (Core) */
-            /* بیرونی شوخ رنگین چمک */
-            box-shadow: 0 0 20px currentColor, 0 0 40px currentColor, 0 0 60px #fff;
+            animation: fireworkBurst 2s infinite cubic-bezier(0.1, 0.7, 1.0, 0.1);
+            background: white; /* Bright core */
+            box-shadow: 
+                0 0 15px currentColor, 
+                0 0 35px currentColor, 
+                0 0 55px #fff;
         }
 
         /* --- ENERGY BAR & MUSIC --- */
@@ -166,10 +167,10 @@
         <div class="header">
             <div class="logo">
                 <i class="fab fa-whatsapp"></i> ADEEL-MINI
-                <div class="name-sparkle" style="--nx: 150px; --ny: -90px; color: #ff0044; left: 10%; animation-delay: 0s;"></div>
-                <div class="name-sparkle" style="--nx: -150px; --ny: 90px; color: #00ff66; right: 10%; animation-delay: 0.4s;"></div>
-                <div class="name-sparkle" style="--nx: 90px; --ny: 120px; color: #ffff00; left: 50%; animation-delay: 0.8s;"></div>
-                <div class="name-sparkle" style="--nx: -90px; --ny: -120px; color: #00ffff; right: 50%; animation-delay: 1.2s;"></div>
+                <div class="name-sparkle" style="--nx: 140px; --ny: -90px; color: #ff0044; left: 10%; animation-delay: 0s;"></div>
+                <div class="name-sparkle" style="--nx: -140px; --ny: 90px; color: #00ff66; right: 10%; animation-delay: 0.5s;"></div>
+                <div class="name-sparkle" style="--nx: 90px; --ny: 120px; color: #ffff00; left: 50%; animation-delay: 1s;"></div>
+                <div class="name-sparkle" style="--nx: -90px; --ny: -120px; color: #00ffff; right: 50%; animation-delay: 1.5s;"></div>
                 <div class="name-sparkle" style="--nx: 0px; --ny: -150px; color: #ff00ff; top: 0; animation-delay: 0.2s;"></div>
             </div>
             
@@ -180,9 +181,9 @@
                         <div class="energy-fill"></div>
                         <div class="energy-center">70%</div>
                         <div class="sparkle-particle" style="--nx: 95px; --ny: -95px; color: #ff4d00; top: 50%; left: 50%; animation-delay: 0.3s;"></div>
-                        <div class="sparkle-particle" style="--nx: -95px; --ny: 95px; color: #33ff00; top: 50%; left: 50%; animation-delay: 0.7s;"></div>
-                        <div class="sparkle-particle" style="--nx: 110px; --ny: 50px; color: #00ffff; top: 50%; left: 50%; animation-delay: 1.1s;"></div>
-                        <div class="sparkle-particle" style="--nx: -70px; --ny: -110px; color: #ff00ff; top: 50%; left: 50%; animation-delay: 1.5s;"></div>
+                        <div class="sparkle-particle" style="--nx: -95px; --ny: 95px; color: #33ff00; top: 50%; left: 50%; animation-delay: 0.8s;"></div>
+                        <div class="sparkle-particle" style="--nx: 110px; --ny: 50px; color: #00ffff; top: 50%; left: 50%; animation-delay: 1.2s;"></div>
+                        <div class="sparkle-particle" style="--nx: -70px; --ny: -110px; color: #ff00ff; top: 50%; left: 50%; animation-delay: 1.7s;"></div>
                     </div>
                 </div>
                 <button class="music-btn" onclick="toggleMusic('music2', this)"><i class="fas fa-play"></i></button>
@@ -226,7 +227,7 @@
             const allBtns = document.querySelectorAll('.music-btn');
             if (music.paused) {
                 allAudios.forEach(a => a.pause());
-                allBtns.forEach(b => { b.classList.remove('playing'); b.innerHTML = '<i class="fas fa-play"></i>'; });
+                allBtns.forEach(b => { b.classList.remove('playing'); b.innerHTML = '<i class="fas fa-pause"></i>'; });
                 music.play();
                 btn.classList.add('playing');
                 btn.innerHTML = '<i class="fas fa-pause"></i>';
