--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         }
 
         @keyframes boxColorChange {
-            0% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.5); }
-            25% { border-color: #ffd700; box-shadow: 0 5px 25px rgba(255, 215, 0, 0.5); }
-            50% { border-color: #00ff00; box-shadow: 0 5px 25px rgba(0, 255, 0, 0.5); }
-            75% { border-color: #00ffff; box-shadow: 0 5px 25px rgba(0, 255, 255, 0.5); }
-            100% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.5); }
+            0% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.4); }
+            25% { border-color: #ffd700; box-shadow: 0 5px 25px rgba(255, 215, 0, 0.4); }
+            50% { border-color: #00ff00; box-shadow: 0 5px 25px rgba(0, 255, 0, 0.4); }
+            75% { border-color: #00ffff; box-shadow: 0 5px 25px rgba(0, 255, 255, 0.4); }
+            100% { border-color: #ff0000; box-shadow: 0 5px 25px rgba(255, 0, 0, 0.4); }
         }
 
         body {
@@ -71,36 +71,35 @@
             animation: slowColorChange 35s infinite linear;
         }
 
-        /* --- 800% ULTRA-BRIGHT SPARKLES --- */
+        /* --- SUPER SHOKH COLORS (NO WHITE CENTER) --- */
         @keyframes fireworkBurst {
             0% { 
-                transform: translate(0, 0) scale(1.5); 
+                transform: translate(0, 0) scale(1.6); 
                 opacity: 1; 
-                filter: brightness(800%) hue-rotate(0deg);
+                filter: brightness(800%) saturate(300%) hue-rotate(0deg);
             }
             50% { 
                 opacity: 1; 
-                filter: brightness(1000%) hue-rotate(180deg);
+                filter: brightness(1000%) saturate(500%) hue-rotate(180deg);
+                box-shadow: 0 0 25px currentColor, 0 0 50px currentColor;
             }
             100% { 
                 transform: translate(var(--nx), var(--ny)) scale(0); 
                 opacity: 0; 
-                filter: brightness(400%) hue-rotate(360deg);
+                filter: brightness(300%) hue-rotate(360deg);
             }
         }
 
         .name-sparkle, .sparkle-particle {
             position: absolute; 
-            width: 10px; 
-            height: 10px; 
+            width: 9px; 
+            height: 9px; 
             border-radius: 50%; 
             pointer-events: none; 
-            animation: fireworkBurst 2s infinite cubic-bezier(0.1, 0.7, 1.0, 0.1);
-            background: white; /* Bright core */
-            box-shadow: 
-                0 0 15px currentColor, 
-                0 0 35px currentColor, 
-                0 0 55px #fff;
+            animation: fireworkBurst 1.8s infinite cubic-bezier(0.1, 0.8, 0.4, 1);
+            background: currentColor; /* صرف اصلی رنگ استعمال ہو گا */
+            /* گہری شوخ چمک */
+            box-shadow: 0 0 20px currentColor, 0 0 45px currentColor, 0 0 65px currentColor;
         }
 
         /* --- ENERGY BAR & MUSIC --- */
@@ -168,9 +167,9 @@
             <div class="logo">
                 <i class="fab fa-whatsapp"></i> ADEEL-MINI
                 <div class="name-sparkle" style="--nx: 140px; --ny: -90px; color: #ff0044; left: 10%; animation-delay: 0s;"></div>
-                <div class="name-sparkle" style="--nx: -140px; --ny: 90px; color: #00ff66; right: 10%; animation-delay: 0.5s;"></div>
-                <div class="name-sparkle" style="--nx: 90px; --ny: 120px; color: #ffff00; left: 50%; animation-delay: 1s;"></div>
-                <div class="name-sparkle" style="--nx: -90px; --ny: -120px; color: #00ffff; right: 50%; animation-delay: 1.5s;"></div>
+                <div class="name-sparkle" style="--nx: -140px; --ny: 90px; color: #00ff66; right: 10%; animation-delay: 0.4s;"></div>
+                <div class="name-sparkle" style="--nx: 90px; --ny: 120px; color: #ffff00; left: 50%; animation-delay: 0.8s;"></div>
+                <div class="name-sparkle" style="--nx: -90px; --ny: -120px; color: #00ffff; right: 50%; animation-delay: 1.2s;"></div>
                 <div class="name-sparkle" style="--nx: 0px; --ny: -150px; color: #ff00ff; top: 0; animation-delay: 0.2s;"></div>
             </div>
             
@@ -181,9 +180,9 @@
                         <div class="energy-fill"></div>
                         <div class="energy-center">70%</div>
                         <div class="sparkle-particle" style="--nx: 95px; --ny: -95px; color: #ff4d00; top: 50%; left: 50%; animation-delay: 0.3s;"></div>
-                        <div class="sparkle-particle" style="--nx: -95px; --ny: 95px; color: #33ff00; top: 50%; left: 50%; animation-delay: 0.8s;"></div>
-                        <div class="sparkle-particle" style="--nx: 110px; --ny: 50px; color: #00ffff; top: 50%; left: 50%; animation-delay: 1.2s;"></div>
-                        <div class="sparkle-particle" style="--nx: -70px; --ny: -110px; color: #ff00ff; top: 50%; left: 50%; animation-delay: 1.7s;"></div>
+                        <div class="sparkle-particle" style="--nx: -95px; --ny: 95px; color: #33ff00; top: 50%; left: 50%; animation-delay: 0.7s;"></div>
+                        <div class="sparkle-particle" style="--nx: 110px; --ny: 50px; color: #00ffff; top: 50%; left: 50%; animation-delay: 1.1s;"></div>
+                        <div class="sparkle-particle" style="--nx: -70px; --ny: -110px; color: #ff00ff; top: 50%; left: 50%; animation-delay: 1.5s;"></div>
                     </div>
                 </div>
                 <button class="music-btn" onclick="toggleMusic('music2', this)"><i class="fas fa-play"></i></button>
